--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -3,18 +3,35 @@
 
 {% block body %}
 <div class="container">
-    
     <form method="post">
         {% csrf_token %}
         <h2>Bank Holders</h2>
-        {% for field in form %}
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label">{{ field.label }}</label>
-                <div class="col-sm-10">
-                    {{ field }}
-                </div>
+        <div class="row">
+            <div class="col-md-6">
+                {% for field in form %}
+                    {% if forloop.counter|divisibleby:2 == 0 %}
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                            <div class="col-sm-8">
+                                {{ field }}
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
-        {% endfor %}
+            <div class="col-md-6">
+                {% for field in form %}
+                    {% if forloop.counter|divisibleby:2 == 1 %}
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                            <div class="col-sm-8">
+                                {{ field }}
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </div>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
 </div>
