--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -3,36 +3,89 @@
 
 {% block body %}
 <div class="container">
-    <form method="post" action="{% url 'bank_account_holder_create' %}">
-        {% csrf_token %}
-        <h2>Bank Holders</h2>
+    <h1>My Forms</h1>
+    <form method="post">
+        <h2>Bank Account Holder Form</h2>
         <div class="row">
-            <div class="col-md-6">
-                {% for field in form %}
-                    {% if forloop.counter|divisibleby:2 == 0 %}
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                            <div class="col-sm-8">
-                                {{ field }}
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
-            <div class="col-md-6">
-                {% for field in form %}
-                    {% if forloop.counter|divisibleby:2 == 1 %}
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                            <div class="col-sm-8">
-                                {{ field }}
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
+            {% for field in bank_account_holder_form %}
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>{{ field.label }}</label>
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+
+        <h2>Bank Account Form</h2>
+        <div class="row">
+            {% for field in bank_account_form %}
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>{{ field.label }}</label>
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <h2>Bank Configuration Form</h2>
+        <div class="row">
+            {% for field in bank_configuration_form %}
+                <div class="col-md-6">
+                    <div class="form-group">
+                        {% if field.field.widget.input_type == 'checkbox' %}
+                            {{ field }} {{ field.label }}
+                        {% else %}
+                            <label>{{ field.label }}</label>
+                            {{ field }}
+                        {% endif %}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <h2>Mailing Address Form</h2>
+        <div class="row">
+            {% for field in mailing_address_form %}
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>{{ field.label }}</label>
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <h2>Banking Details Form</h2>
+        <div class="row">
+            {% for field in banking_details_form %}
+                <div class="col-md-6">
+                    <div class="form-group">
+                        {% if field.field.widget.input_type == 'checkbox' %}
+                            {{ field }} {{ field.label }}
+                        {% else %}
+                            <label>{{ field.label }}</label>
+                            {{ field }}
+                        {% endif %}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <h2>Opening Balance Form</h2>
+        <div class="row">
+            {% for field in opening_balance_form %}
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>{{ field.label }}</label>
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        <input type="submit" value="Submit" class="btn btn-primary">
     </form>
 </div>
 {% endblock %}
