--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -3,89 +3,100 @@
 
 {% block body %}
 <div class="container">
-    <h1>My Forms</h1>
-    <form method="post">
-        <h2>Bank Account Holder Form</h2>
+    
+    <form method="post" action="{% url 'bank_account_holder_create' %}">
+        {% csrf_token %}
         <div class="row">
-            {% for field in bank_account_holder_form %}
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>{{ field.label }}</label>
-                        {{ field }}
+            <div class="col-md-6">
+                <h2>Bank Account Holder Form</h2>
+                {% for field in bank_account_holder_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
+            <div class="col-md-6">
+                <h2>Bank Account Form</h2>
+                {% for field in bank_account_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
 
-        <h2>Bank Account Form</h2>
         <div class="row">
-            {% for field in bank_account_form %}
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>{{ field.label }}</label>
-                        {{ field }}
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-
-        <h2>Bank Configuration Form</h2>
-        <div class="row">
-            {% for field in bank_configuration_form %}
-                <div class="col-md-6">
-                    <div class="form-group">
+            <div class="col-md-6">
+                <h2>Bank Configuration Form</h2>
+                {% for field in bank_configuration_form %}
+                    <div class="form-group row">
                         {% if field.field.widget.input_type == 'checkbox' %}
                             {{ field }} {{ field.label }}
                         {% else %}
-                            <label>{{ field.label }}</label>
-                            {{ field }}
+                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                            <div class="col-sm-8">
+                                {{ field }}
+                            </div>
                         {% endif %}
                     </div>
-                </div>
-            {% endfor %}
-        </div>
-
-        <h2>Mailing Address Form</h2>
-        <div class="row">
-            {% for field in mailing_address_form %}
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>{{ field.label }}</label>
-                        {{ field }}
+                {% endfor %}
+            </div>
+            <div class="col-md-6">
+                <h2>Mailing Address Form</h2>
+                {% for field in mailing_address_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
 
-        <h2>Banking Details Form</h2>
         <div class="row">
-            {% for field in banking_details_form %}
-                <div class="col-md-6">
-                    <div class="form-group">
+            <div class="col-md-6">
+                <h2>Banking Details Form</h2>
+                {% for field in banking_details_form %}
+                    <div class="form-group row">
                         {% if field.field.widget.input_type == 'checkbox' %}
                             {{ field }} {{ field.label }}
                         {% else %}
-                            <label>{{ field.label }}</label>
-                            {{ field }}
+                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                            <div class="col-sm-8">
+                                {{ field }}
+                            </div>
                         {% endif %}
                     </div>
-                </div>
-            {% endfor %}
-        </div>
-
-        <h2>Opening Balance Form</h2>
-        <div class="row">
-            {% for field in opening_balance_form %}
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label>{{ field.label }}</label>
-                        {{ field }}
+                {% endfor %}
+            </div>
+            <div class="col-md-6">
+                <h2>Opening Balance Form</h2>
+                {% for field in opening_balance_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                        </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
 
         <input type="submit" value="Submit" class="btn btn-primary">
     </form>
+
+    {# Add custom styles to change the background color of select elements #}
+    <style>
+        select {
+            background-color: white;
+        }
+    </style>
 </div>
 {% endblock %}
