--- a/templates/bank_account_holder_edit.html
+++ b/templates/bank_account_holder_edit.html
@@ -3,36 +3,79 @@
 
 {% block body %}
 <div class="container">
+    <h2>Edit All</h2>
     <form method="post" >
         {% csrf_token %}
-        <h2>Edit Bank Account Holder</h2>
-        <div class="row">
-            <div class="col-md-6">
-                {% for field in form %}
-                    {% if forloop.counter|divisibleby:2 == 0 %}
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                            <div class="col-sm-8">
-                                {{ field }}
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
+        
+        <h3>Bank Account Holder Form</h3>
+        {% for field in bank_account_holder_form %}
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                <div class="col-sm-8">
+                    {{ field }}
+                </div>
             </div>
-            <div class="col-md-6">
-                {% for field in form %}
-                    {% if forloop.counter|divisibleby:2 == 1 %}
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                            <div class="col-sm-8">
-                                {{ field }}
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
+        {% endfor %}
+        
+        <h3>Bank Account Form</h3>
+        {% for field in bank_account_form %}
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                <div class="col-sm-8">
+                    {{ field }}
+                </div>
             </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        {% endfor %}
+        
+        <h3>Mailing Address Form</h3>
+        {% for field in mailing_address_form %}
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                <div class="col-sm-8">
+                    {{ field }}
+                </div>
+            </div>
+        {% endfor %}
+        
+        <h3>Opening Balance Form</h3>
+        {% for field in opening_balance_form %}
+            <div class="form-group row">
+                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                <div class="col-sm-8">
+                    {{ field }}
+                </div>
+            </div>
+        {% endfor %}
+        
+        <h3>Banking Details Form</h3>
+        {% for field in banking_details_form %}
+            <div class="form-group row">
+                {% if field.field.widget.input_type == 'radio' %}
+                    {{ field }} {{ field.label }}
+                {% else %}
+                    <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                    <div class="col-sm-8">
+                        {{ field }}
+                    </div>
+                {% endif %}
+            </div>
+        {% endfor %}
+        
+        <h3>Bank Configuration Form</h3>
+        {% for field in bank_configuration_form %}
+            <div class="form-group row">
+                {% if field.field.widget.input_type == 'radio' %}
+                    {{ field }} {{ field.label }}
+                {% else %}
+                    <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                    <div class="col-sm-8">
+                        {{ field }}
+                    </div>
+                {% endif %}
+            </div>
+        {% endfor %}
+
+        <input type="submit" value="Save" class="btn btn-primary">
     </form>
 </div>
 {% endblock %}
