--- a/templates/bank_account_holder_edit.html
+++ b/templates/bank_account_holder_edit.html
@@ -3,79 +3,145 @@
 
 {% block body %}
 <div class="container">
-    <h2>Edit All</h2>
+    <h2>Edit Account Holder</h2>
     <form method="post" >
         {% csrf_token %}
         
-        <h3>Bank Account Holder Form</h3>
-        {% for field in bank_account_holder_form %}
-            <div class="form-group row">
-                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                <div class="col-sm-8">
-                    {{ field }}
-                </div>
-            </div>
-        {% endfor %}
-        
-        <h3>Bank Account Form</h3>
-        {% for field in bank_account_form %}
-            <div class="form-group row">
-                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                <div class="col-sm-8">
-                    {{ field }}
-                </div>
-            </div>
-        {% endfor %}
-        
-        <h3>Mailing Address Form</h3>
-        {% for field in mailing_address_form %}
-            <div class="form-group row">
-                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                <div class="col-sm-8">
-                    {{ field }}
-                </div>
-            </div>
-        {% endfor %}
-        
-        <h3>Opening Balance Form</h3>
-        {% for field in opening_balance_form %}
-            <div class="form-group row">
-                <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                <div class="col-sm-8">
-                    {{ field }}
-                </div>
-            </div>
-        {% endfor %}
-        
-        <h3>Banking Details Form</h3>
-        {% for field in banking_details_form %}
-            <div class="form-group row">
-                {% if field.field.widget.input_type == 'radio' %}
-                    {{ field }} {{ field.label }}
-                {% else %}
-                    <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                    <div class="col-sm-8">
-                        {{ field }}
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Bank Account Holder Form</h3>
+                {% for field in bank_account_holder_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                            <style>
+                                #{{ field.auto_id }} {
+                                    background-color: #2f516f;
+                                    color: white;
+                                }
+                            </style>
+                        </div>
                     </div>
-                {% endif %}
+                {% endfor %}
             </div>
-        {% endfor %}
-        
-        <h3>Bank Configuration Form</h3>
-        {% for field in bank_configuration_form %}
-            <div class="form-group row">
-                {% if field.field.widget.input_type == 'radio' %}
-                    {{ field }} {{ field.label }}
-                {% else %}
-                    <label class="col-sm-4 col-form-label">{{ field.label }}</label>
-                    <div class="col-sm-8">
-                        {{ field }}
+            <div class="col-md-6">
+                <h3>Bank Account Form</h3>
+                {% for field in bank_account_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                            <style>
+                                #{{ field.auto_id }} {
+                                    background-color: #2f516f;
+                                    color: white;
+                                }
+                            </style>
+                        </div>
                     </div>
-                {% endif %}
+                {% endfor %}
             </div>
-        {% endfor %}
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Bank Configuration Form</h3>
+                {% for field in bank_configuration_form %}
+                    <div class="form-group row">
+                        {% if field.field.widget.input_type == 'checkbox' %}
+                            {{ field }} {{ field.label }}
+                        {% else %}
+                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                            <div class="col-sm-8">
+                                {{ field }}
+                                <style>
+                                    #{{ field.auto_id }} {
+                                        background-color: #2f516f;
+                                        color: white;
+                                    }
+                                </style>
+                            </div>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-md-6">
+                <h3>Mailing Address Form</h3>
+                {% for field in mailing_address_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                            <style>
+                                #{{ field.auto_id }} {
+                                    background-color: #2f516f;
+                                    color: white;
+                                }
+                            </style>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Banking Details Form</h3>
+                {% for field in banking_details_form %}
+                    <div class="form-group row">
+                        {% if field.field.widget.input_type == 'checkbox' %}
+                            {{ field }} {{ field.label }}
+                        {% else %}
+                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                            <div class="col-sm-8">
+                                {{ field }}
+                                <style>
+                                    #{{ field.auto_id }} {
+                                        background-color: #2f516f;
+                                        color: white;
+                                    }
+                                </style>
+                            </div>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-md-6">
+                <h3>Opening Balance Form</h3>
+                {% for field in opening_balance_form %}
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-8">
+                            {{ field }}
+                            <style>
+                                #{{ field.auto_id }} {
+                                    background-color: #2f516f;
+                                    color: white;
+                                }
+                            </style>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
 
         <input type="submit" value="Save" class="btn btn-primary">
     </form>
-</div>
+
+    {# Add custom styles to change the background color of select elements #}
+    <style>
+        .black-select {
+            background-color: white;
+            color: black;
+        }
+
+        .black-select option:hover {
+            background-color: white;
+        }
+    </style>
+
+</div> 
 {% endblock %}
+
+
