--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -1,9 +1,10 @@
 {% extends 'app1/base.html' %}
 {% load static %}
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 {% block body %}
 <div class="container">
-    <form method="post" action="{% url 'bank_account_holder_create' %}" enctype="multipart/form-data">
+    <form method="post" action="{% url 'bank_account_holder_create' %}" class="form-style" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="row">
             <div class="col-md-6">
@@ -80,12 +81,13 @@
                         </div>
                     </div>
                 {% endfor %}
-            </div>
-        </div>
+            </div> 
+        </div> 
 
+        <!-- Additional code -->
         <div class="row">
             <div class="col-md-6">
-                <h2>Banking Details Form</h2>
+                <h2>Tax Registration Form</h2>
                 {% for field in banking_details_form %}
                     <div class="form-group row">
                         {% if field.field.widget.input_type == 'checkbox' %}
@@ -119,25 +121,54 @@
                                 }
                             </style>
                         </div>
-                    </div>
-                {% endfor %}
-            </div>
-        </div>
+                    </div> 
+                {% endfor %} 
+            </div> 
+        </div> 
 
-        <input type="submit" value="Submit" class="btn btn-primary">
-    </form>
+        <!-- Submit button -->
+        <input type="submit" value="Submit" class="btn btn-primary"> 
+    </form> 
 
+    <!-- Custom styles -->
     {# Add custom styles to change the background color of select elements #}
-    <style>
-        .black-select {
-            background-color: white;
-            color: black;
-        }
+    <style> 
+        .black-select { 
+            background-color: white; 
+            color: black; 
+        } 
 
-        .black-select option:hover {
-            background-color: white;
-        }
-    </style>
+        .black-select option:hover { 
+            background-color: white; 
+        } 
+    </style> 
+    <style> 
+        input:disabled, select:disabled, textarea:disabled { 
+            background-color: #e9ecef; 
+        } 
+    </style> 
 </div> 
-{% endblock %}
 
+<!-- JavaScript code -->
+<script> 
+// Get references to the relevant form fields
+let registrationTypeField = document.querySelector('#id_registration_type');
+let gstinUnField = document.querySelector('#id_gstin_un');
+
+// Define a function to update the disabled state of the gstin_un field
+function updateGstinUnField() {
+    if (['consumer', 'unregistered'].includes(registrationTypeField.value)) {
+        gstinUnField.disabled = true;
+        gstinUnField.value = '';
+    } else {
+        gstinUnField.disabled = false;
+    }
+}
+
+// Call the update function when the page loads
+updateGstinUnField();
+
+// Add an event listener to the registration_type field to call the update function when its value changes
+registrationTypeField.addEventListener('change', updateGstinUnField);
+</script>
+{% endblock %}
