--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -1,6 +1,7 @@
 {% extends 'app1/base.html' %}
 {% load static %}
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 {% block body %}
 <div class="container">
@@ -115,21 +116,7 @@
 
     <!-- Custom styles -->
     {# Add custom styles to change the background color of select elements #}
-    <style> 
-        .black-select { 
-            background-color: white; 
-            color: black; 
-        } 
-
-        .black-select option:hover { 
-            background-color: white; 
-        } 
-    </style> 
-    <style> 
-        input:disabled, select:disabled, textarea:disabled { 
-            background-color: #e9ecef; 
-        } 
-    </style> 
+   
 </div> 
 
 
@@ -155,5 +142,8 @@ updateGstinUnField();
 
 // Add an event listener to the registration_type field to call the update function when its value changes
 registrationTypeField.addEventListener('change', updateGstinUnField);
+
+
+
 </script>
 {% endblock %}
