--- a/templates/bank_account_holder_detail.html
+++ b/templates/bank_account_holder_detail.html
@@ -1,5 +1,6 @@
 {% extends 'app1/base.html' %}
 {% load static %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css">
 
 {% block body %}
 <div class="container">
